feat: implement dependency analysis and security updates
- Add comprehensive DEPENDENCY_JUSTIFICATION.md documenting all dependencies
- Fix pyo3 vulnerability by upgrading from 0.23.1 to 0.24.1 (RUSTSEC-2025-0020)
- Add anyhow dependency for enhanced error handling
- Create TDD tests for dependency documentation requirements
- Add infrastructure lessons learned documentation

All acceptance criteria met:
- ✅ Current dependencies analyzed and documented
- ✅ New dependencies identified and justified
- ✅ Cargo.toml files updated with new dependencies
- ✅ Cargo.lock updated
- ✅ Dependency justification document created
- ✅ No version conflicts introduced
- ✅ Security audit passing (only dev dependency warnings remain)

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,17 +8,18 @@ repository ="https://github.com/evanofslack/balatro-rs"
 keywords = ["balatro", "game-engine", "move-generator"]
 
 [dependencies]
+anyhow = "~1.0"
+colored = {version = "2.2.0", optional = true}
+indexmap = "2.6.0"
+itertools = "0.13.0"
+pyo3 = {version = "0.24.1", optional = true}
 rand = "~0.8.5"
-thiserror = "~1.0.61"
 serde = { version = "~1.0.215", optional = true, features = ["derive"] }
 serde_json = { version = "~1.0.118", optional = true }
+strum = { version = "0.26", features = ["derive"] }
+thiserror = "~1.0.61"
 tracing = { version = "~0.1.40", optional = true}
 uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}
-itertools = "0.13.0"
-indexmap = "2.6.0"
-strum = { version = "0.26", features = ["derive"] }
-pyo3 = {version = "0.23.1", optional = true}
-colored = {version = "2.2.0", optional = true}
 
 [dev-dependencies]
 criterion = "0.3"
